# ZedXcode

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
crates/xcode-dap/: Cargo.toml  build.rs
crates/xcode-dap-config/: Cargo.toml
crates/xcode-dap-config/src/: lib.rs
crates/xcode-dap/src/: main.rs
crates/xcode-dap/src/bsp/: ingest.rs  mod.rs  server.rs
crates/xcode-dap/src/commands/: build.rs  clean.rs  console.rs  doctor.rs  mod.rs  refresh.rs  run.rs  select.rs  setup.rs
crates/xcode-dap/src/dap/: framing.rs  lldb.rs  mod.rs  peek.rs  proxy.rs
crates/xcode-dap/src/engine/: compile_store.rs  config.rs  consoles.rs  mod.rs  pipeline.rs  selection.rs  simctl.rs  xcactivitylog.rs  xcodebuild.rs
crates/xcode-dap/src/setup/: build_server.rs  jsonc.rs  mod.rs  project.rs  user.rs
crates/xcode-dap/src/util/: hash.rs  logging.rs  mod.rs  paths.rs  pidfile.rs  procgroup.rs
docs/: publishing.md
docs/design/: bsp-server.md  dap-proxy.md  extension-api.md
extension/: Cargo.toml  README.md  extension.toml
extension/debug_adapter_schemas/: Xcode.json
extension/src/: lib.rs
tests/: bsp_smoke.py  dap_smoke.py
