[package]
name = "xcode-dap"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "DAP proxy and CLI that builds, installs, and debugs iOS apps from Zed via xcodebuild, simctl, and lldb-dap"
repository = "https://github.com/Leonkh/ZedXcode"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "process",
    "io-std",
    "io-util",
    "sync",
    "signal",
    "time",
    "fs",
    "macros",
] }
tokio-util = "0.7"
xcode-dap-config = { path = "../xcode-dap-config" }
